# To-Do-List

src/backend/todo/: pyproject.toml
src/backend/todo/todo/: settings.py
